# rscarbon

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  README.qmd  references.bib
R/: calibrate.R  calibrated-grid.R  calibration-curve.R  calibration_curve.R  collect.R  extendr-wrappers.R  interpolate.R  read_14c.R  rscarbon-package.R  spd.R
data/: intcal13.rda  intcal20.rda  marine13.rda  marine20.rda  shcal13.rda  shcal20.rda
data-raw/: calbs.R  get-calibration-curves.R
man/: calibrate.Rd  calibration.Rd  interpolate.Rd  rc_as_calibration.Rd  rc_calibrate.Rd  rc_collect.Rd  rc_spd.Rd  rscarbon-package.Rd  rscarbon-vctrs.Rd
src/: Makevars  Makevars.win  entrypoint.c  rscarbon-win.def
src/rust/: Cargo.toml
src/rust/src/: c14date.rs  caldate.rs  calibration.rs  lib.rs  mat_utils.rs
