[package]
name = 'rscarbon'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rscarbon'

[dependencies]
csv = "1.3"
extendr-api = { git = "https://github.com/extendr/extendr.git" }
faer = "0.19"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.10"
statrs = "0.15"

[profile.release]
lto = true
codegen-units = 1
